versioned_docs/version-2023.1/01_getting-started/03_go-to-the-next-level/05_data-grid.md
---
title: 'Go to the next level - show data using Data Grid'
sidebar_label: 'Data Grid'
id: data-grid
keywords: [getting started, quick start, next level, data grid]
tags:
    - getting started
    - quick start
    - next level
    - data grid
---

## Prerequisites

There are a couple of steps that have to be done before seeing the user interface running.

- the back-end services must be deployed
- you must have imported the login credentials in the csv files
- you must have imported the example data in the csv files

### Connecting the back end and front end

#### Run the database

Go to the terminal and run your PostgreSQL database:

```Powershell
docker ps --format '{{ .ID }}\t{{.Image}}\t{{ .Names }}'
docker pull postgres
docker run --name localPostgresDb -p 5432:5432 -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=postgres -d postgres postgres -c 'max_connections=10000'
```

#### Genesis-system-definition

Since we are using a Postgres database, you need to add the highlighted items DbLayer and DbHost exactly as they are specified below to genesis-system-definition.kts:

```kotlin {4,10} title="genesis-system-definition.xml"
systemDefinition {
    global {
        ...
        item(name = "DbLayer", value = "SQL")
        item(name = "DictionarySource", value = "DB")
        item(name = "AliasSource", value = "DB")
        item(name = "MetricsEnabled", value = "false")
        item(name = "ZeroMQProxyInboundPort", value = "5001")
        item(name = "ZeroMQProxyOutboundPort", value = "5000")
        item(name = "DbHost", value = "jdbc:postgresql://localhost:5432/?user=postgres&password=postgres")
        item(name = "DbMode", value = "VANILLA")
        ...
    }
    
}
```

Now you can run the genesis **resource deamon** and start all the process 

### API Host

Go to **alpha\client\web\package.json** and make sure you override the highlighted line

```kotlin {8} title="web\package.json"
{
  "name": "@genesislcap/alpha-web-client",
  "description": "Blank App Web Client",
  "version": "0.0.1",
  "private": true,
  "license": "Apache-2.0",
  "config": {
    "API_HOST": "ws://localhost:9064",
    "DEFAULT_USER": "JaneDee",
    "DEFAULT_PASSWORD": "beONneON*74",
    "PORT": 6060
  },
  ```

## Section objectives
The goal of this section is to run the UI for the first time and add a data grid.

## Showing all positions

For your user interface, the `genx` process has generated the following files:

- **home.template.ts**
- **home.ts**
- **home.styles.ts**

In the template file, start by adding the Genesis data source pointing to the appropriate resource name; this must be wrapped in a grid of your choice.
<!-- This example uses order-by which we could not make it happen at the time.


[//]: # (link to grid-pro-genesis-datasource tsdocs)
```html title="home.template.ts"
<zero-grid-pro>
	<grid-pro-genesis-datasource
		resource-name="ALL_POSITIONS"
		order-by="INSTRUMENT_ID"
	></grid-pro-genesis-datasource>
</zero-grid-pro>
```
-->

[//]: # (link to grid-pro-genesis-datasource tsdocs)
```html title="home.template.ts"
<zero-grid-pro>
	<grid-pro-genesis-datasource
		resource-name="ALL_POSITIONS"
	></grid-pro-genesis-datasource>
</zero-grid-pro>
```


This will result in a grid displaying all the columns available in the `ALL_POSITIONS` resource:

![](/img/positions-grid.png)

## Grid interaction

To add new columns that are not part of the API, we can add additional column definitions.

```html {6} title="home.template.ts"
<zero-grid-pro>
    <grid-pro-genesis-datasource
        resource-name="ALL_POSITIONS"
    ></grid-pro-genesis-datasource>
    <grid-pro-column :definition="${x => x.singlePositionActionColDef}" />
</zero-grid-pro>

```

In the component definition file (inside class home), we can provide a method that enables us to interact with the rest of the class.
The example below creates a column with a button that logs data in the row to the console.
Here you can easily swap logging the row data with some custom logic (such as calling a back-end api, which we shall cover in more detail later on).

```typescript title="home.ts"
  public singlePositionActionColDef = {
    headerName: 'Action',
    minWidth: 120,
    maxWidth: 120,
    cellRenderer: 'action',
    cellRendererParams: {
      actionClick: async (rowData) => {
        console.log(rowData);
      },
      actionName: 'Add Trade',
      appearance: 'primary-gradient',
    },
    pinned: 'right',
  };
```

After refreshing the application, the grid should now also include a column containing a button:

![](/img/positions-grid-with-button.png)

## Custom column config

If you want to customise how each column is displayed, you can provide a column config for every column.

Create a new file called **positionColumnDefs.ts** in the same directory.

```typescript title="positionColumnDefs.ts"
export const positionColumnDefs = [
  {field: 'INSTRUMENT_ID', headerName: 'Instrument', sort: 'desc', flex: 2},
  {field: 'QUANTITY', headerName: 'Quantity', type: 'rightAligned', flex: 1, enableCellChangeFlash: true},
  {field: 'NOTIONAL', headerName: 'Traded Value', type: 'rightAligned', flex: 1, enableCellChangeFlash: true},
  {field: 'VALUE', headerName: 'Market Value', type: 'rightAligned', flex: 1, enableCellChangeFlash: true},
  {field: 'PNL', headerName: 'PNL', type: 'rightAligned', flex: 1, enableCellChangeFlash: true},
];
```

To stop automatic generation of columns, you need to add the `only-template-col-defs` attribute to the zero-grid-pro.

Then use the [repeat](https://www.fast.design/docs/fast-element/using-directives/#the-repeat-directive) directive; this includes all the columns from our column config array.


```typescript {1,3,6,10-12} title="home.template.ts"
import {html,repeat} from '@microsoft/fast-element';
import type {Home} from './home';
import {positionColumnDefs} from './positionColumnDefs';

export const HomeTemplate = html<Home>`
<zero-grid-pro only-template-col-defs>
    <grid-pro-genesis-datasource
        resource-name="ALL_POSITIONS"
    ></grid-pro-genesis-datasource>
    ${repeat(() => positionColumnDefs, html`
                <grid-pro-column :definition="${x => x}"></grid-pro-column>
                `)}
    <grid-pro-column :definition="${x => x.singlePositionActionColDef}"></grid-pro-column>
</zero-grid-pro>
`;
```

Columns will now flash green as the value inside changes:
![](/img/positions-grid-with-cell-change-flash.png)

## Saving user preferences

You can add the `persist-column-state-key` to the zero-grid-pro to persist user changes to things such as sorting, column order, and visibility on the user machine. With this, when the user reloads the browser, they get the same configuration.

```html {2}
<zero-grid-pro
    persist-column-state-key='position-grid-settings'
>
```


[//]: # (link to zero-grid-pro tsdocs)

## Conclusion
You can use the [positions app tutorial repo](https://github.com/genesiscommunitysuccess/positions-app-tutorial/tree/Complete_positions_app/client/web/src/routes/home) as a reference point for the grids.
